src/tests/errors/syntax/012.err
[1m[0;31merror: [0monly declarations are allowed at top level
  [1m[34m-->[0m src/tests/errors/syntax/012.ura:4:1
  [1m[34m|[0m
[1m[34m4 |[0m 42
  [1m[34m|[0m [1;31m^^[0m
